# arcade-example

./: .env.example  agent_crewai.ipynb  agent_langraph.ipynb  agent_swarm.ipynb  agent_swarm_v2.ipynb  example_arcade-ai.ipynb  openai_tools.ipynb  pyproject.toml
crewai_arcade/: structed.py
langchain_arcade_custom/: _utilities.py  logic.py  manager.py
swarm_custom/: core.py  types.py
